fixat medie queries o adderat dropbtn där

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       crossorigin="anonymous"
     ></script>
     <style>
-      @media screen and (max-width: 375px) {
+      @media screen and (max-width: 743px) {
         body {
           margin: 10px;
         }
@@ -41,7 +41,7 @@
           margin-top: -3px;
         }
       }
-      @media screen and (min-width: 376px) {
+      /* @media screen and (min-width: 376px) {
         body {
           margin: 10px;
         }
@@ -52,7 +52,7 @@
         .nav {
           display: flex;
           flex-direction: column;
-          /* max-height:0; */
+          
           overflow: visible;
           margin-top: 10px;
         }
@@ -71,7 +71,7 @@
         .kontakt {
           display: none;
         }
-      }
+      } */
       @media screen and (min-width: 744px) {
         .menu_inside {
           display: flex;
@@ -93,6 +93,24 @@
           display: none;
         }
         .kontakt {
+          display: none;
+        }
+        .sog {
+          display: flex;
+        }
+        .dropbtn {
+          display: flex;
+        }
+        .dropbtn1 {
+          display: none;
+        }
+        .dropbtn2 {
+          display: none;
+        }
+        .dropbtn3 {
+          display: none;
+        }
+        .dropbtn4 {
           display: none;
         }
       }
@@ -118,6 +136,21 @@
           display: flex;
         }
         .kontakt {
+          display: flex;
+        }
+        .dropbtn {
+          display: flex;
+        }
+        .dropbtn1 {
+          display: flex;
+        }
+        .dropbtn2 {
+          display: flex;
+        }
+        .dropbtn3 {
+          display: flex;
+        }
+        .dropbtn4 {
           display: flex;
         }
       }
@@ -190,7 +223,7 @@
           </div>
 
           <div class="dropdown3">
-            <button class="dropbtn" onclick="info_open()">INFO</button>
+            <button class="dropbtn3" onclick="info_open()">INFO</button>
             <div class="dropdown-content3" id="id_dropdown-content3">
               <a href="#">OKTOBER</a>
               <a href="#">NOVEMBER</a>
