--- a/index.html
+++ b/index.html
@@ -73,12 +73,16 @@
         }
       } */
       @media screen and (min-width: 744px) {
+        body {
+          margin: 10px;
+        }
         .menu_inside {
           display: flex;
         }
         .nav {
           display: flex;
           flex-direction: row;
+          margin-top: 10px;
         }
         .menu {
           display: none;
@@ -115,12 +119,16 @@
         }
       }
       @media screen and (min-width: 1100px) {
+        body {
+          margin: 10px;
+        }
         .menu_inside {
           display: none;
         }
         .nav {
           display: flex;
           flex-direction: row;
+          margin-top: 10px;
         }
         .menu {
           display: none;
@@ -314,7 +322,9 @@
             <div class="sale">forsalg: 180kr køb</div>
           </div>
           <div class="subsection_bottom">
-            <h2 class="headliner">j.bernardt <span class="countrycode">(be)</span></h2>
+            <h2 class="headliner">
+              j.bernardt <span class="countrycode">(be)</span>
+            </h2>
           </div>
         </div>
 
