--- a/index.html
+++ b/index.html
@@ -79,9 +79,12 @@
         .nav {
           display: flex;
           flex-direction: row;
+          justify-content: center;
         }
         .menu {
           display: none;
+          margin-top: 10px;
+          
         }
         .genre {
           display: none;
