--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
           display: flex;
           flex-direction: row;
           margin-top: 10px;
+          overflow: visible;
         }
         .menu {
           display: none;
