--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
           <div class="dropdown">
             <button class="dropbtn" onclick="kalendar_open()">KALENDAR</button>
             <div class="dropdown-content" id="id_dropdown-content">
+              <span class="kalendar_x_btn" onclick="kalendar_close()">×</span>
               <a href="#">OKTOBER</a>
               <a href="#">NOVEMBER</a>
               <a href="#">DECEMBER</a>
