adding JS for other menu items

--- a/index.html
+++ b/index.html
@@ -23,161 +23,161 @@
       crossorigin="anonymous"
     ></script>
     <style>
-      @media screen and (max-width: 743px) {
-        body {
-          margin: 10px;
-        }
+            @media screen and (max-width: 743px) {
+              body {
+                margin: 10px;
+              }
 
-        .menu_inside {
-          display: none;
-        }
-        .nav {
-          display: flex;
-          /* flex-direction: column; */
-          max-height: 0;
-          overflow: hidden;
-          padding-left: 160px;
-          padding-right: 160px;
-          margin-top: -3px;
-        }
-      }
-      /* @media screen and (min-width: 376px) {
-        body {
-          margin: 10px;
-        }
+              .menu_inside {
+                display: none;
+              }
+              .nav {
+                display: flex;
+                /* flex-direction: column; */
+                max-height: 0;
+                overflow: hidden;
+                padding-left: 160px;
+                padding-right: 160px;
+                margin-top: -3px;
+              }
+            }
+            /* @media screen and (min-width: 376px) {
+              body {
+                margin: 10px;
+              }
 
-        .menu_inside {
-          display: flex;
-        }
-        .nav {
-          display: flex;
-          flex-direction: column;
-          
-          overflow: visible;
-          margin-top: 10px;
-        }
-        .menu {
-          display: none;
-        }
-        .genre {
-          display: none;
-        }
-        .billeder {
-          display: none;
-        }
-        .info {
-          display: none;
-        }
-        .kontakt {
-          display: none;
-        }
-      } */
-      @media screen and (min-width: 744px) {
-        body {
-          margin: 10px;
-        }
-        .menu_inside {
-          display: flex;
-        }
-        .nav {
-          display: flex;
-          flex-direction: row;
+              .menu_inside {
+                display: flex;
+              }
+              .nav {
+                display: flex;
+                flex-direction: column;
 
-          justify-content: center;
+                overflow: visible;
+                margin-top: 10px;
+              }
+              .menu {
+                display: none;
+              }
+              .genre {
+                display: none;
+              }
+              .billeder {
+                display: none;
+              }
+              .info {
+                display: none;
+              }
+              .kontakt {
+                display: none;
+              }
+            } */
+            @media screen and (min-width: 744px) {
+              body {
+                margin: 10px;
+              }
+              .menu_inside {
+                display: flex;
+              }
+              .nav {
+                display: flex;
+                flex-direction: row;
 
-          margin-top: 10px;
-<<<<<<< HEAD
-          overflow: visible;
-=======
+                justify-content: center;
 
->>>>>>> 8400cf7b8a15a44c1b1dfe36c8802907cb5a4315
-        }
-        .menu {
-          display: none;
-          margin-top: 10px;
-          
-        }
-        .genre {
-          display: none;
-        }
-        .billeder {
-          display: none;
-        }
-        .info {
-          display: none;
-        }
-        .kontakt {
-          display: none;
-        }
-        .sog {
-          display: flex;
-        }
-        .dropbtn {
-          display: flex;
-        }
-        .dropbtn1 {
-          display: none;
-        }
-        .dropbtn2 {
-          display: none;
-        }
-        .dropbtn3 {
-          display: none;
-        }
-        .dropbtn4 {
-          display: none;
-        }
-      }
-      @media screen and (min-width: 1100px) {
-        body {
-          margin: 10px;
-        }
-        .menu_inside {
-          display: none;
-        }
-        .nav {
-          display: flex;
-          flex-direction: row;
-          margin-top: 10px;
-        }
-        .menu {
-          display: none;
-        }
+                margin-top: 10px;
+      <<<<<<< HEAD
+                overflow: visible;
+      =======
 
-        .genre {
-          display: flex;
-        }
-        .billeder {
-          display: flex;
-        }
-        .info {
-          display: flex;
-        }
-        .kontakt {
-          display: flex;
-        }
-        .dropbtn {
-          display: flex;
-        }
-        .dropbtn1 {
-          display: flex;
-        }
-        .dropbtn2 {
-          display: flex;
-        }
-        .dropbtn3 {
-          display: flex;
-        }
-        .dropbtn4 {
-          display: flex;
-        }
-      }
+      >>>>>>> 8400cf7b8a15a44c1b1dfe36c8802907cb5a4315
+              }
+              .menu {
+                display: none;
+                margin-top: 10px;
 
-      @media screen and (max-width: 744px) {
-        .bluebox {
-          display: none;
-        }
-      }
+              }
+              .genre {
+                display: none;
+              }
+              .billeder {
+                display: none;
+              }
+              .info {
+                display: none;
+              }
+              .kontakt {
+                display: none;
+              }
+              .sog {
+                display: flex;
+              }
+              .dropbtn {
+                display: flex;
+              }
+              .dropbtn1 {
+                display: none;
+              }
+              .dropbtn2 {
+                display: none;
+              }
+              .dropbtn3 {
+                display: none;
+              }
+              .dropbtn4 {
+                display: none;
+              }
+            }
+            @media screen and (min-width: 1100px) {
+              body {
+                margin: 10px;
+              }
+              .menu_inside {
+                display: none;
+              }
+              .nav {
+                display: flex;
+                flex-direction: row;
+                margin-top: 10px;
+              }
+              .menu {
+                display: none;
+              }
+
+              .genre {
+                display: flex;
+              }
+              .billeder {
+                display: flex;
+              }
+              .info {
+                display: flex;
+              }
+              .kontakt {
+                display: flex;
+              }
+              .dropbtn {
+                display: flex;
+              }
+              .dropbtn1 {
+                display: flex;
+              }
+              .dropbtn2 {
+                display: flex;
+              }
+              .dropbtn3 {
+                display: flex;
+              }
+              .dropbtn4 {
+                display: flex;
+              }
+            }
+
+            @media screen and (max-width: 744px) {
+              .bluebox {
+                display: none;
+              }
+            }
     </style>
   </head>
   <body>
@@ -226,37 +226,35 @@
           <div class="dropdown1">
             <button class="dropbtn1" onclick="genre_open()">GENRE</button>
             <div class="dropdown-content1" id="id_dropdown-content1">
-              <a href="#">OKTOBER</a>
-              <a href="#">NOVEMBER</a>
-              <a href="#">DECEMBER</a>
+              <span class="genre_x_btn" onclick="genre_close()">×</span>
+              <a href="#">PUNK</a>
+              <a href="#">REGGAE</a>
+              <a href="#">HIP HOP</a>
             </div>
           </div>
 
           <div class="dropdown2">
             <button class="dropbtn2" onclick="billeder_open()">BILLEDER</button>
-            <div class="dropdown-content" id="id_dropdown-content2">
-              <a href="#">OKTOBER</a>
-              <a href="#">NOVEMBER</a>
-              <a href="#">DECEMBER</a>
+            <div class="dropdown-content2" id="id_dropdown-content2">
+              <span class="billeder_x_btn" onclick="billeder_close()">×</span>
+              <a href="#">2024</a>
+              <a href="#">2023</a>
+              <a href="#">2022</a>
             </div>
           </div>
 
           <div class="dropdown3">
-            <button class="dropbtn3" onclick="info_open()">INFO</button>
-            <div class="dropdown-content3" id="id_dropdown-content3">
-              <a href="#">OKTOBER</a>
-              <a href="#">NOVEMBER</a>
-              <a href="#">DECEMBER</a>
-            </div>
+            <a href="info.html">
+              <button class="dropbtn3" onclick="info_open()">INFO</button>
+              <div class="dropdown-content3" id="id_dropdown-content3"></div
+            ></a>
           </div>
 
           <div class="dropdown4">
-            <button class="dropbtn4" onclick="kontakt_open()">KALENDAR</button>
-            <div class="dropdown-content4" id="id_dropdown-content4">
-              <a href="#">OKTOBER</a>
-              <a href="#">NOVEMBER</a>
-              <a href="#">DECEMBER</a>
-            </div>
+            <a href="info.html">
+              <button class="dropbtn4" onclick="kontakt_open()">KONTAKT</button>
+              <div class="dropdown-content4" id="id_dropdown-content4"></div
+            ></a>
           </div>
 
           <!-- 
