--- a/info.html
+++ b/info.html
@@ -18,6 +18,7 @@
     />
     <link href="index.css" rel="stylesheet" />
     <link href="index.scss" rel="stylesheet" />
+    <link href="media.css" rel="stylesheet" />
   </head>
   <body>
 
@@ -25,112 +26,6 @@
     src="https://kit.fontawesome.com/9e70829e25.js"
     crossorigin="anonymous"
   ></script>
-  <style>
-    @media screen and (max-width: 375px) {
-        body {
-          margin: 10px;
-        }
-
-        .menu_inside {
-          display: none;
-        }
-        .nav {
-          display: flex;
-          /* flex-direction: column; */
-          max-height: 0;
-          overflow: hidden;
-          padding-left: 160px;
-          padding-right: 160px;
-          margin-top: -3px;
-        }
-      }
-      @media screen and (min-width: 376px) {
-        body {
-          margin: 10px;
-        }
-
-        .menu_inside {
-          display: flex;
-        }
-        .nav {
-          display: flex;
-          flex-direction: column;
-          /* max-height:0; */
-          overflow: visible;
-          margin-top: 10px;
-        }
-        .menu {
-          display: none;
-        }
-        .genre {
-          display: none;
-        }
-        .billeder {
-          display: none;
-        }
-        .info {
-          display: none;
-        }
-        .kontakt {
-          display: none;
-        }
-      }
-      @media screen and (min-width: 744px) {
-        .menu_inside {
-          display: flex;
-        }
-        .nav {
-          display: flex;
-          flex-direction: row;
-        }
-        .menu {
-          display: none;
-        }
-        .genre {
-          display: none;
-        }
-        .billeder {
-          display: none;
-        }
-        .info {
-          display: none;
-        }
-        .kontakt {
-          display: none;
-        }
-      }
-      @media screen and (min-width: 1100px) {
-        .menu_inside {
-          display: none;
-        }
-        .nav {
-          display: flex;
-          flex-direction: row;
-        }
-        .menu {
-          display: none;
-        }
-
-        .genre {
-          display: flex;
-        }
-        .billeder {
-          display: flex;
-        }
-        .info {
-          display: flex;
-        }
-        .kontakt {
-          display: flex;
-        }
-      }
-
-      @media screen and (max-width: 744px) {
-        .bluebox {
-          display: none;
-        }
-      }
-    </style>
   </head>
   <body>
     <div class="container">
