--- a/index.html
+++ b/index.html
@@ -22,163 +22,7 @@
       src="https://kit.fontawesome.com/9e70829e25.js"
       crossorigin="anonymous"
     ></script>
-    <style>
-            @media screen and (max-width: 743px) {
-              body {
-                margin: 10px;
-              }
-
-              .dropdown5 {
-                display: none;
-              }
-              .nav {
-                display: flex;
-                /* flex-direction: column; */
-                max-height: 0;
-                overflow: hidden;
-                padding-left: 160px;
-                padding-right: 160px;
-                margin-top: -3px;
-              }
-            }
-            /* @media screen and (min-width: 376px) {
-              body {
-                margin: 10px;
-              }
-
-              .dropdown5 {
-                display: flex;
-              }
-              .nav {
-                display: flex;
-                flex-direction: column;
-
-                overflow: visible;
-                margin-top: 10px;
-              }
-              .menu {
-                display: none;
-              }
-              .genre {
-                display: none;
-              }
-              .billeder {
-                display: none;
-              }
-              .info {
-                display: none;
-              }
-              .kontakt {
-                display: none;
-              }
-            } */
-            @media screen and (min-width: 744px) {
-              body {
-                margin: 10px;
-              }
-              .dropdown5 {
-                display: flex;
-              }
-              .nav {
-                display: flex;
-                flex-direction: row;
-
-                justify-content: center;
-
-                margin-top: 10px;
-      <<<<<<< HEAD
-                overflow: visible;
-      =======
-
-      >>>>>>> 8400cf7b8a15a44c1b1dfe36c8802907cb5a4315
-              }
-              .menu {
-                display: none;
-                margin-top: 10px;
-
-              }
-              .genre {
-                display: none;
-              }
-              .billeder {
-                display: none;
-              }
-              .info {
-                display: none;
-              }
-              .kontakt {
-                display: none;
-              }
-              .sog {
-                display: flex;
-              }
-              .dropbtn {
-                display: flex;
-              }
-              .dropbtn1 {
-                display: none;
-              }
-              .dropbtn2 {
-                display: none;
-              }
-              .dropbtn3 {
-                display: none;
-              }
-              .dropbtn4 {
-                display: none;
-              }
-            }
-            @media screen and (min-width: 1100px) {
-              body {
-                margin: 10px;
-              }
-              .dropdown5{
-                display: none;
-              }
-              .nav {
-                display: flex;
-                flex-direction: row;
-                margin-top: 10px;
-              }
-              .menu {
-                display: none;
-              }
-
-              .genre {
-                display: flex;
-              }
-              .billeder {
-                display: flex;
-              }
-              .info {
-                display: flex;
-              }
-              .kontakt {
-                display: flex;
-              }
-              .dropbtn {
-                display: flex;
-              }
-              .dropbtn1 {
-                display: flex;
-              }
-              .dropbtn2 {
-                display: flex;
-              }
-              .dropbtn3 {
-                display: flex;
-              }
-              .dropbtn4 {
-                display: flex;
-              }
-            }
-
-            @media screen and (max-width: 744px) {
-              .bluebox {
-                display: none;
-              }
-            }
-    </style>
+    <style></style>
   </head>
   <body>
     <div class="container">
