--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <div class="shows">
         <div class="band">
           <div class="subsection_top">
-            <div class="date">FREDAG 27. SEP 2024 - KL 21.00</div>
+            <div class="date">FREDAG 20. SEP 2024 - KL 21.00</div>
             <div class="sale">forsalg: 180kr køb</div>
           </div>
           <div class="subsection_bottom">
@@ -148,7 +148,7 @@
 
         <div class="band">
           <div class="subsection_top">
-            <div class="date">FREDAG 27. SEP 2024 - KL 21.00</div>
+            <div class="date">Lørdag 21. SEP 2024 - KL 21.00</div>
             <div class="sale">forsalg: 180kr køb</div>
           </div>
           <div class="subsection_bottom">
@@ -163,7 +163,7 @@
 
         <div class="band">
           <div class="subsection_top">
-            <div class="date">FREDAG 27. SEP 2024 - KL 21.00</div>
+            <div class="date">torsdag 26. SEP 2024 - KL 20.30</div>
             <div class="sale">forsalg: 180kr køb</div>
           </div>
           <div class="subsection_bottom">
@@ -186,7 +186,7 @@
 
         <div class="band">
           <div class="subsection_top">
-            <div class="date">FREDAG 27. SEP 2024 - KL 21.00</div>
+            <div class="date">Søndag 29. SEP 2024 - KL 19.00</div>
             <div class="sale">forsalg: 180kr køb</div>
           </div>
           <div class="subsection_bottom">
@@ -198,7 +198,7 @@
 
         <div class="band">
           <div class="subsection_top">
-            <div class="date">FREDAG 27. SEP 2024 - KL 21.00</div>
+            <div class="date">Tirsdag 01. okt 2024 - KL 20.30</div>
             <div class="sale">forsalg: 180kr køb</div>
           </div>
           <div class="subsection_bottom">
