--- a/index.html
+++ b/index.html
@@ -89,17 +89,15 @@
           </div>
 
           <div class="dropdown3">
-            <a href="info.html">
-              <button class="dropbtn3" onclick="info_open()">INFO</button>
-              <div class="dropdown-content3" id="id_dropdown-content3"></div
-            ></a>
+            <a href="info.html" class="dropbtn3" onclick="info_open()">INFO</a>
+            <div class="dropdown-content3" id="id_dropdown-content3"></div>
           </div>
 
           <div class="dropdown4">
-            <a href="info.html">
-              <button class="dropbtn4" onclick="kontakt_open()">KONTAKT</button>
-              <div class="dropdown-content4" id="id_dropdown-content4"></div
-            ></a>
+            <a href="info.html" class="dropbtn4" onclick="kontakt_open()"
+              >KONTAKT</a
+            >
+            <div class="dropdown-content4" id="id_dropdown-content4"></div>
           </div>
 
           <!-- 
