ARIA label för search (input form thing)

--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
           <span class="closebtn" onclick="closeSearch()" title="Luk">×</span>
           <div class="searchbar-open">
             <form action="toTheSearchGnomes">
-              <input type="text" name="search" />
+              <input
+                type="text"
+                name="search"
+                aria-label="Sitewide"
+                role="search"
+              />
               <button type="submit">SØG</button>
             </form>
           </div>
