everything is good now.. cleaned up the code. Then creating own branch for SASS 100% converted from css.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     />
     <link href="index.css" rel="stylesheet" />
     <link href="media.css" rel="stylesheet" />
-    <!-- <link href="index.scss" rel="stylesheet" /> -->
     <script
       src="https://kit.fontawesome.com/9e70829e25.js"
       crossorigin="anonymous"
@@ -50,12 +49,7 @@
             <span class="closebtn" onclick="closeSearch()" title="Luk">×</span>
             <div class="searchbar-open">
               <form action="toTheSearchGnomes">
-                <input
-                  type="text"
-                  name="search"
-                  aria-label="Sitewide"
-                  role="search"
-                />
+                <input type="text" name="search" aria-label="Sitewide" />
                 <button type="submit">SØG</button>
               </form>
             </div>
@@ -116,11 +110,6 @@
                 <div class="dropdown-content4" id="id_dropdown-content4"></div>
               </div>
 
-              <!-- 
-          <div class="genre"><a href="#">GENRE</a></div>
-          <div class="billeder"><a href="#">BILLEDER</a></div>
-          <div class="info"><a href="info.html">INFO</a></div>
-          <div class="kontakt"><a href="kontakt.html">KONTAKT</a></div> -->
               <div class="sog">
                 <button class="searchbtn" onclick="openSearch()">SØG</button>
               </div>
@@ -137,10 +126,6 @@
                   <a href="kontakt.html">KONTAKT</a>
                 </div>
               </div>
-
-              <!-- <div class="dropdown5">
-            <a href="#">MENU<i class="bi bi-list"></i></a>
-          </div> -->
             </div>
           </nav>
         </div>
