divided upp all files but still messy result with the live preview

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     />
     <link href="index.css" rel="stylesheet" />
     <link href="media.css" rel="stylesheet" />
+    <link href="footer.css" rel="stylesheet" />
+    <link href="header.css" rel="stylesheet" />
+    <link href="navbar.css" rel="stylesheet" />
+    <link href="section.css" rel="stylesheet" />
+
     <script
       src="https://kit.fontawesome.com/9e70829e25.js"
       crossorigin="anonymous"
