adding last semantic html Section

--- a/index.html
+++ b/index.html
@@ -127,77 +127,91 @@
         </div>
       </header>
       <div class="shows">
-        <div class="band">
-          <div class="subsection_top">
-            <div class="date">FREDAG 20. SEP 2024 - KL 21.00</div>
-            <div class="sale">forsalg: 180kr køb</div>
+        <section>
+          <div class="band">
+            <div class="subsection_top">
+              <div class="date">FREDAG 20. SEP 2024 - KL 21.00</div>
+              <div class="sale">forsalg: 180kr køb</div>
+            </div>
+            <div class="subsection_bottom">
+              <h2 class="headliner">
+                bodega <span class="countrycode">(us)</span>
+              </h2>
+              <p class="supporting">
+                the klittens <span class="countrycode">(nl)</span>
+              </p>
+            </div>
           </div>
-          <div class="subsection_bottom">
-            <h2 class="headliner">
-              bodega <span class="countrycode">(us)</span>
-            </h2>
-            <p class="supporting">
-              the klittens <span class="countrycode">(nl)</span>
-            </p>
+        </section>
+        <section>
+          <div class="band">
+            <div class="subsection_top">
+              <div class="date">Lørdag 21. SEP 2024 - KL 21.00</div>
+              <div class="sale">forsalg: 180kr køb</div>
+            </div>
+            <div class="subsection_bottom">
+              <h2 class="headliner">
+                unida <span class="countrycode">(us)</span>
+              </h2>
+              <p class="supporting">
+                bürner <span class="countrycode">(se)</span>
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="band">
-          <div class="subsection_top">
-            <div class="date">Lørdag 21. SEP 2024 - KL 21.00</div>
-            <div class="sale">forsalg: 180kr køb</div>
+        </section>
+        <section>
+          <div class="band">
+            <div class="subsection_top">
+              <div class="date">torsdag 26. SEP 2024 - KL 20.30</div>
+              <div class="sale">forsalg: 180kr køb</div>
+            </div>
+            <div class="subsection_bottom">
+              <h2 class="headliner">
+                den syvende søn <span class="countrycode"></span>
+              </h2>
+            </div>
           </div>
-          <div class="subsection_bottom">
-            <h2 class="headliner">
-              unida <span class="countrycode">(us)</span>
-            </h2>
-            <p class="supporting">
-              bürner <span class="countrycode">(se)</span>
-            </p>
+        </section>
+        <section>
+          <div class="band">
+            <div class="subsection_top">
+              <div class="date">FREDAG 27. SEP 2024 - KL 21.00</div>
+              <div class="sale">forsalg: 180kr køb</div>
+            </div>
+            <div class="subsection_bottom">
+              <h2 class="headliner">
+                filuka <span class="countrycode"></span>
+              </h2>
+              <p class="supporting">prosa <span class="countrycode"></span></p>
+            </div>
           </div>
-        </div>
-        <div class="band">
-          <div class="subsection_top">
-            <div class="date">torsdag 26. SEP 2024 - KL 20.30</div>
-            <div class="sale">forsalg: 180kr køb</div>
+        </section>
+        <section>
+          <div class="band">
+            <div class="subsection_top">
+              <div class="date">Søndag 29. SEP 2024 - KL 19.00</div>
+              <div class="sale">forsalg: 180kr køb</div>
+            </div>
+            <div class="subsection_bottom">
+              <h2 class="headliner">
+                j.bernardt <span class="countrycode">(be)</span>
+              </h2>
+            </div>
           </div>
-          <div class="subsection_bottom">
-            <h2 class="headliner">
-              den syvende søn <span class="countrycode"></span>
-            </h2>
+        </section>
+        <section>
+          <div class="band">
+            <div class="subsection_top">
+              <div class="date">Tirsdag 01. okt 2024 - KL 20.30</div>
+              <div class="sale">forsalg: 180kr køb</div>
+            </div>
+            <div class="subsection_bottom">
+              <h2 class="headliner">
+                jenny don't and the spurs <span class="countrycode">(us)</span>
+              </h2>
+            </div>
           </div>
-        </div>
-        <div class="band">
-          <div class="subsection_top">
-            <div class="date">FREDAG 27. SEP 2024 - KL 21.00</div>
-            <div class="sale">forsalg: 180kr køb</div>
-          </div>
-          <div class="subsection_bottom">
-            <h2 class="headliner">filuka <span class="countrycode"></span></h2>
-            <p class="supporting">prosa <span class="countrycode"></span></p>
-          </div>
-        </div>
-        <div class="band">
-          <div class="subsection_top">
-            <div class="date">Søndag 29. SEP 2024 - KL 19.00</div>
-            <div class="sale">forsalg: 180kr køb</div>
-          </div>
-          <div class="subsection_bottom">
-            <h2 class="headliner">
-              j.bernardt <span class="countrycode">(be)</span>
-            </h2>
-          </div>
-        </div>
-        <div class="band">
-          <div class="subsection_top">
-            <div class="date">Tirsdag 01. okt 2024 - KL 20.30</div>
-            <div class="sale">forsalg: 180kr køb</div>
-          </div>
-          <div class="subsection_bottom">
-            <h2 class="headliner">
-              jenny don't and the spurs <span class="countrycode">(us)</span>
-            </h2>
-          </div>
-        </div>
+        </section>
       </div>
       <footer>
         <div class="socialmedia">
