adding sections in info and kontakt htmls for better CSS readability

--- a/info.html
+++ b/info.html
@@ -84,7 +84,7 @@
             <a href="#">MENU<i class="bi bi-list"></i></a>
           </div>
         </div>
-      </div>
+      </div><section>
     <div class="info_container">
       <h2>INFO FOR ALL VISITORS:</h2>
 <p>	Opening hours:</p>
