--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="da">
   <head>
-    <title>LOPPEN</title>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>LOPPEN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/assets/loppelogonew.svg" />
     <link
@@ -59,9 +58,7 @@
                   KALENDAR
                 </button>
                 <div class="dropdown-content" id="id_dropdown-content">
-                  <span class="kalendar_x_btn" onclick="kalendar_close()"
-                    >×</span
-                  >
+                  <span class="x_btn" onclick="kalendar_close()">×</span>
                   <a href="#">OKTOBER</a>
                   <a href="#">NOVEMBER</a>
                   <a href="#">DECEMBER</a>
@@ -70,7 +67,7 @@
               <div class="dropdown1">
                 <button class="dropbtn1" onclick="genre_open()">GENRE</button>
                 <div class="dropdown-content1" id="id_dropdown-content1">
-                  <span class="genre_x_btn" onclick="genre_close()">×</span>
+                  <span class="x_btn" onclick="genre_close()">×</span>
                   <a href="#">PUNK</a>
                   <a href="#">REGGAE</a>
                   <a href="#">HIP HOP</a>
@@ -81,9 +78,7 @@
                   BILLEDER
                 </button>
                 <div class="dropdown-content2" id="id_dropdown-content2">
-                  <span class="billeder_x_btn" onclick="billeder_close()"
-                    >×</span
-                  >
+                  <span class="x_btn" onclick="billeder_close()">×</span>
                   <a href="#">2024</a>
                   <a href="#">2023</a>
                   <a href="#">2022</a>
@@ -109,7 +104,7 @@
                   MENU<i class="bi bi-list"></i>
                 </button>
                 <div class="dropdown-content5" id="id_dropdown-content5">
-                  <span class="menu_x_btn" onclick="menu_close()">×</span>
+                  <span class="x_btn" onclick="menu_close()">×</span>
                   <a href="#">GENRE</a>
                   <a href="#">BILLEDER</a>
                   <a href="info.html">INFO</a>
