reducing a lot crap in navbar scss by using BEM metod

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="da">
   <head>
     <meta charset="UTF-8" />
@@ -53,57 +53,83 @@
           <nav>
             <div class="menu">MENU<i class="bi bi-list"></i></div>
             <div class="nav">
-              <div class="dropdown">
-                <button class="dropbtn" onclick="kalendar_open()">
+              <div class="dropdown dropdown0">
+                <button class="dropbtn dropbtn0" onclick="kalendar_open()">
                   KALENDAR
                 </button>
-                <div class="dropdown-content" id="id_dropdown-content">
+                <div
+                  class="dropdown-content dropdown-content0"
+                  id="id_dropdown-content"
+                >
                   <span class="x_btn" onclick="kalendar_close()">×</span>
                   <a href="#">OKTOBER</a>
                   <a href="#">NOVEMBER</a>
                   <a href="#">DECEMBER</a>
                 </div>
               </div>
-              <div class="dropdown1">
-                <button class="dropbtn1" onclick="genre_open()">GENRE</button>
-                <div class="dropdown-content1" id="id_dropdown-content1">
+              <div class="dropdown1 dropdown0">
+                <button class="dropbtn1 dropbtn0" onclick="genre_open()">
+                  GENRE
+                </button>
+                <div
+                  class="dropdown-content1 dropdown-content0"
+                  id="id_dropdown-content1"
+                >
                   <span class="x_btn" onclick="genre_close()">×</span>
                   <a href="#">PUNK</a>
                   <a href="#">REGGAE</a>
                   <a href="#">HIP HOP</a>
                 </div>
               </div>
-              <div class="dropdown2">
-                <button class="dropbtn2" onclick="billeder_open()">
+              <div class="dropdown2 dropdown0">
+                <button class="dropbtn2 dropbtn0" onclick="billeder_open()">
                   BILLEDER
                 </button>
-                <div class="dropdown-content2" id="id_dropdown-content2">
+                <div
+                  class="dropdown-content2 dropdown-content0"
+                  id="id_dropdown-content2"
+                >
                   <span class="x_btn" onclick="billeder_close()">×</span>
                   <a href="#">2024</a>
                   <a href="#">2023</a>
                   <a href="#">2022</a>
                 </div>
               </div>
-              <div class="dropdown3">
-                <a href="info.html" class="dropbtn3" onclick="info_open()"
+              <div class="dropdown3 dropdown0">
+                <a
+                  href="info.html"
+                  class="dropbtn3 dropbtn0"
+                  onclick="info_open()"
                   >INFO</a
                 >
-                <div class="dropdown-content3" id="id_dropdown-content3"></div>
+                <div
+                  class="dropdown-content3 dropdown-content0"
+                  id="id_dropdown-content3"
+                ></div>
               </div>
-              <div class="dropdown4">
-                <a href="info.html" class="dropbtn4" onclick="kontakt_open()"
+              <div class="dropdown4 dropdown0">
+                <a
+                  href="info.html"
+                  class="dropbtn4 dropbtn0"
+                  onclick="kontakt_open()"
                   >KONTAKT</a
                 >
-                <div class="dropdown-content4" id="id_dropdown-content4"></div>
+                <div
+                  class="dropdown-content4 dropdown-content0"
+                  id="id_dropdown-content4"
+                ></div>
               </div>
               <div class="sog">
                 <button class="searchbtn" onclick="openSearch()">SØG</button>
               </div>
-              <div class="dropdown5">
-                <button class="dropbtn5" onclick="menu_open()">
+              <div class="dropdown5 dropdown0">
+                <button class="dropbtn5 dropbtn0" onclick="menu_open()">
                   MENU<i class="bi bi-list"></i>
                 </button>
-                <div class="dropdown-content5" id="id_dropdown-content5">
+                <div
+                  class="dropdown-content5 dropdown-content0"
+                  id="id_dropdown-content5"
+                >
                   <span class="x_btn" onclick="menu_close()">×</span>
                   <a href="#">GENRE</a>
                   <a href="#">BILLEDER</a>
