fixed inconsitencies in the nav bar for the different sizes and improved the semantic html

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
           </nav>
         </div>
       </header>
+      <main>
       <div class="shows">
         <div class="band">
           <div class="subsection_top">
@@ -194,6 +195,7 @@
           </div>
         </div>
       </div>
+    </main>
       <footer>
         <div class="socialmedia">
           <i class="fa-brands fa-instagram"></i>
